# self-voice-clone

./: .gitignore  README.md  implementation_plan.md  package-lock.json
vclone/: README.md  sample-text.txt
vclone/apps/api/: pyproject.toml
vclone/apps/api/app/: main.py
vclone/apps/api/app/api/v1/: router.py
vclone/apps/api/app/api/v1/routes/: enrollments.py  synthesis.py  system.py  uploads.py  voice_profiles.py
vclone/apps/api/app/core/: config.py
vclone/apps/api/app/db/: session.py
vclone/apps/api/app/models/: __init__.py  audit_event.py  enrollment.py  generated_asset.py  mixins.py  synthesis_job.py  user.py  voice_profile.py
vclone/apps/api/app/schemas/: enrollment.py  synthesis.py  upload.py  voice_profile.py
vclone/apps/api/app/services/: alignment.py  asr_backcheck.py  audio_artifacts.py  audio_processing.py  audio_quality.py  audio_segmenter.py  audit.py  candidate_gating.py  clone_engines.py  engine_registry.py  enrollment.py  evaluation.py  mastering.py  post_synthesis_qc.py  prompt_leak.py  pronunciation.py  quality_scoring.py  similarity_calibration.py  smoke_tests.py  speaker_verification.py  srt_parser.py  storage.py  synthesis.py  text.py  transcription.py  tts_engine.py  uploads.py  voice_dataset.py  voice_profiles.py
vclone/apps/api/app/workers/: bootstrap.py
vclone/apps/api/scripts/: diagnose_voice_profile.py
vclone/apps/api/tests/: __init__.py  test_audio_artifacts.py  test_audio_quality.py  test_candidate_gating.py  test_candidate_plan.py  test_integration_toggle.py  test_mastering_and_routes.py  test_prompt_leak.py  test_similarity_calibration.py  test_synthesis_reference_resolution.py  test_text_synthesis_helpers.py  test_voice_dataset_prompt_policy.py  test_voxcpm_reference_audio.py
vclone/apps/web/: package-lock.json  package.json  tsconfig.json
vclone/apps/web/.next/: app-build-manifest.json  build-manifest.json  trace
vclone/apps/web/.next/cache/: .rscinfo
vclone/apps/web/app/: globals.css  layout.tsx  page.tsx
vclone/apps/web/components/: Nav.tsx  SectionCard.tsx
vclone/apps/web/lib/: api.ts
vclone/docs/: personal-voice-clone-tts-design.md
(+27 files in other folders)
