[project]
name = "vclone-api"
version = "0.1.0"
description = "MVP backend for personal voice clone TTS platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "TTS>=0.22.0",
  "faster-whisper>=1.0.0",
  "speechbrain>=1.0.0",
  "torchaudio>=2.2.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
